--- a/exercises/css/style.css
+++ b/exercises/css/style.css
@@ -1,10 +1,10 @@
-@font-face {
+/* @font-face {
     font-family: 'Oswald';
     src: url('../fonts/Oswald-Regular.ttf') format('truetype');
-}
+} */
 
 * {
-    font-family: 'Oswald', sans-serif;
+    font-family: sans-serif;
 }
 
 html {
